--- a/projects/fps/config.json
+++ b/projects/fps/config.json
@@ -1,6 +1,6 @@
 {
 "title":"Character Controller",
-"thumb":"projects/a/preview.png",
+"thumb":"projects/fps/preview.png",
 "desc":"A phyics reactive character controller, with responsive player movement.<br>Supports moving platforms, different physics materials, rigidbody interaction.",
-"url":"projects/a/page.html"
+"url":"projects/fps/page.html"
 }
