--- a/projects/fps/config.json
+++ b/projects/fps/config.json
@@ -1,6 +1,6 @@
 {
-"title":"Character Controller",
+"title":"FPS Prototype",
 "thumb":"projects/fps/preview.png",
-"desc":"A phyics reactive character controller, with responsive player movement.<br>Supports moving platforms, different physics materials, rigidbody interaction.",
+"desc":"A multiplayer FPS prototype. <br> I used Mirror for networking, and my own FPS player controller. The controller feels \"snappy\"; and, it also reacts to physics and vice-versa.",
 "url":"projects/fps/page.html"
 }
