--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist"
   },
   "devDependencies": {
     "@types/three": "^0.160.0",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   },
   "dependencies": {
     "three": "^0.160.1",
     "vite-plugin-glsl": "^1.2.1"
-  }
+  },
+  "homepage": "https://peter226.github.io/portfolio/"
 }
