--- a/public/projects/survival/config.json
+++ b/public/projects/survival/config.json
@@ -1,6 +1,6 @@
 {
 "title":"Sandbox Survival",
-"thumb":"projects/survival/preview.png",
+"thumb":"projects/survival/preview.webp",
 "desc":"A [discontinued] sandbox survival game inspired by Minecraft, with infinite procedural terrain; biomes; water simulation; inventory-, crafting-, and building systems.",
 "url":"projects/survival/page.html"
 }
