--- a/public/projects/huehades/config.json
+++ b/public/projects/huehades/config.json
@@ -1,6 +1,6 @@
 {
 "title":"Hue Hades",
-"thumb":"projects/huehades/preview.png",
+"thumb":"projects/huehades/preview.webp",
 "desc":"A fast image editing software utilizing GPU acceleration, originally made in Unity as my university thesis project. Features brushes, repeating canvas, customizable UI, layers, history and more!",
 "url":"projects/huehades/page.html"
 }
